# cmake-template

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: build-dirs.cmake  build-types.cmake  clang-format.cmake  clang-tidy.cmake  colorful-message.cmake  compilation-flags.cmake  cpp-standard.cmake  export-compile-commands_json.cmake  find-alternative-linkers.cmake  in-source-guard.cmake  include-what-you-use.cmake  link-what-you-use.cmake  memory-sanitizers.cmake  policies.cmake  testing.cmake
cmake/clang/: build-types.cmake  compilation-flags.cmake  cpp-standard.cmake
cmake/common/: build-dirs.cmake  build-types.cmake  clang-format.cmake  cpp-standard.cmake
config/: iwyu-mappings.imp
scripts/: format_cmake  format_code
src/: CMakeLists.txt
src/application/: CMakeLists.txt  main.cpp
src/application/PrimesAccumulator/: CMakeLists.txt  PrimesAccumulator.cpp  PrimesAccumulator.hpp
src/libs/: CMakeLists.txt
src/libs/primes/: CMakeLists.txt
src/libs/primes/include/primes/: IPrimesCalculatorFactory.hpp  PrimesCalculator.hpp  PrimesCalculatorFactory.hpp
src/libs/primes/src/: BoostBasedPrimesCalculator.cpp  BoostBasedPrimesCalculator.hpp  PrimesCalculatorFactory.cpp
src/libs/primes/tests/: BoostBasedPrimesCalculatorTests.cpp  CMakeLists.txt  First10000Primes.hpp
tests/: CMakeLists.txt
tests/ut/: CMakeLists.txt  PrimesAccumulatorTests.cpp  ut.cpp
tests/ut/mocks/: CMakeLists.txt
tests/ut/mocks/include/primes-mocks/mocks/: PrimesCalculatorMock.hpp
